GPencil: Unable to Sculpt last point when Subdivide Modifier is enabled #99381

Closed
opened 2022-07-04 09:26:33 +02:00 by guzu · 4 comments

System Information
Operating system: Windows
Graphics card: GeForce

Blender Version
Broken: 3.1.2
Worked: Not sure

Short description of error

  • Draw anything in grease pencil
  • Add subdivide modifier
  • Go to sculpt mode
  • Use Push brush to move the last vertex of any stroke.

You'll notice that while smooth modifier is active, you can't move the last vertex of every stroke. You have to disable it to work normally.

Note that Push is one of the brushes that fails. But, almost all brushes will fail the same way.

**System Information** Operating system: Windows Graphics card: GeForce **Blender Version** Broken: 3.1.2 Worked: Not sure **Short description of error** - Draw anything in grease pencil - Add subdivide modifier - Go to sculpt mode - Use Push brush to move the last vertex of any stroke. You'll notice that while smooth modifier is active, you can't move the last vertex of every stroke. You have to disable it to work normally. Note that Push is one of the brushes that fails. But, almost all brushes will fail the same way.
Author

Added subscriber: @guzu

Added subscriber: @guzu
Antonio Vazquez changed title from Subdivide Modifier Breakes Sculpting to GPencil: Unable to Sculpt last point when Subdivide Modifieris enabled 2022-07-04 10:09:02 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez changed title from GPencil: Unable to Sculpt last point when Subdivide Modifieris enabled to GPencil: Unable to Sculpt last point when Subdivide Modifier is enabled 2022-07-04 10:09:12 +02:00
Antonio Vazquez self-assigned this 2022-07-04 10:55:58 +02:00

This issue was referenced by 004913dd95

This issue was referenced by 004913dd957b641eb1b283b469838220406d0787

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99381
No description provided.