Fix T99381: GPencil Unable to Sculpt last point using Subdivide Modifier

The problem was the last point had the original point, but the previous one not, so the loop ends before checking last point.

The solution is avoid the loop exist if the function is checking the previous point before last one.